Test 1.8 support build